calibre/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calibre
  namespace: calibre
  labels:
    app.kubernetes.io/name: calibre
    app.kubernetes.io/instance: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre
      app.kubernetes.io/instance: calibre
  serviceName: ""
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre
        app.kubernetes.io/instance: calibre
    spec:
      containers:
      - name: calibre
        image: docker.io/linuxserver/calibre-web:0.6.9-ls89
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /config
          name: data
        ports:
        - name: http
          containerPort: 8083
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 300
        readinessProbe:
          httpGet:
            path: /
            port: http
      enableServiceLinks: false
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: calibre
