calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: calibre
  labels:
    app.kubernetes.io/name: calibre
    app.kubernetes.io/instance: calibre
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app.kubernetes.io/name: calibre
    app.kubernetes.io/instance: calibre
